[tool.poetry]
name = "cd-py-coords"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cd-py-math = {git = "https://github.com/RulezKT/cd_py_math.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
